
lib_LTLIBRARIES = \
	libmetha.la

libmetha_la_LDFLAGS = -version-info 0:0:0

EXTRA_DIST = \
	libev/ev.c \
	libev/ev.h \
	libev/ev_epoll.c \
	libev/ev_kqueue.c \
	libev/ev_poll.c \
	libev/ev_port.c \
	libev/ev_select.c \
	libev/ev_vars.h \
	libev/ev_win32.c \
	libev/ev_wrap.h \
	libev/LICENSE

libmetha_la_SOURCES = \
	default.h    \
	filetype.c   \
	filetype.h   \
	io.h \
	io.c		 \
	html.c	  \
	metha.h   \
	metha.c	 \
	url.h \
	url.c        \
	errors.h	\
	errors.c    \
	mime.c      \
	mime.h      \
	ftindex.h   \
	ftindex.c   \
	crawler.c   \
	crawler.h  \
	urlengine.h \
	urlengine.c \
	worker.c    \
	worker.h    \
	js.c        \
	js.h        \
	utable.c    \
	utable.h    \
	wfunction.h    \
	mtrie.h     \
	mtrie.c     \
	umex.c      \
	umex.h      \
	builtin.c   \
	builtin.h   \
	ftpparse.h  \
	ftpparse.c  \
	events.h    \
	events.c    \
	str.h       \
	str.c       \
	mod.c       \
	mod.h       \
	module.h    \
	filter.h    \
	filter.c    \
	conf.h      \
	conf.c

AM_CFLAGS = -Wall
